--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
+    implementation files ('C:\\Program Files (x86)\\Java\\jre1.8.0_321\\lib\\rt.jar')
+
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
     implementation 'com.github.NoahBres:MeepMeep:2.0.0'
