--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
     implementation 'com.github.NoahBres:MeepMeep:2.0.0'
+
+    implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.1'
 }
