--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -35,4 +35,11 @@ dependencies {
     implementation 'com.github.NoahBres:MeepMeep:2.0.0'
 
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.1'
+
+    implementation 'org.ftclib.ftclib:core:2.0.1'
+    // the following is optional if you want vision
+    implementation 'org.ftclib.ftclib:vision:2.0.1'
+
+    implementation 'org.openftc:easyopencv:1.5.2'
+    implementation 'org.openftc:apriltag:1.1.0'
 }
