--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,4 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build  
-        run: ./gradlew build
+        run: ./gradlew :TeamCode:build
