--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,6 +10,10 @@
 
 // Custom definitions may go here
 
+plugins {
+    id 'com.google.devtools.ksp' version '1.7.20-1.0.7'
+}
+
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
@@ -17,9 +21,19 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+
+    kotlin {
+        sourceSets.debug {
+            kotlin.srcDirs += 'build/generated/ksp/debug/kotlin'
+        }
+        sourceSets.release {
+            kotlin.srcDirs += 'build/generated/ksp/release/kotlin'
+        }
+    }
 }
 
 repositories {
+    mavenCentral()
     maven { url 'https://jitpack.io' }
     maven { url = 'https://maven.brott.dev/' }
 }
@@ -27,6 +41,9 @@ repositories {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+
+    implementation project(':TunableAutoGen')
+    ksp project(':TunableAutoGen')
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.5'
