--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.6.0'
     repositories {
         mavenCentral()
         google()
@@ -13,8 +12,12 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
     }
+}
+
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.7.20' apply false
 }
 
 // This is now required because aapt2 has to be downloaded from the
